--- a/syllabus_intro_to_stats.qmd
+++ b/syllabus_intro_to_stats.qmd
@@ -129,11 +129,11 @@ There will be weekly DataCamp assignments that reinforce the material taught in 
 The following is a tentative list of DataCamp assignments. This may change depending on the pace of the class, so please check the DataCamp platform for the most up-to-date assignments.
 
 - Introduction to Statistics in R **(will be optional, for 1pt extra credit due September 22)**
-- Foundations of Probability in R (select chapters)
-- Sampling in R (select chapters)
-- Hypothesis Testing in R (select chapters)
-- Foundations of Inference in R (select chapters)
-- Experimental Design in R (select chapters)
+- Foundations of Probability in R 
+- Sampling in R: optional, due October 13th. 
+- Hypothesis Testing in R
+- Foundations of Inference in R, optional, due October 20th.
+- Experimental Design in R, optional, due October 27th.
 
 ## Case study 
 
